Hacky scrollbar fix that seems to work at normal resolution

--- a/sass/elements/_content.scss
+++ b/sass/elements/_content.scss
@@ -1,18 +1,22 @@
 .content {
 	background-color: #fff;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
 	min-height: 100%;
 
 	@include layout($medium) {
 		float: right;
 		padding: 50px $width-medium-padding;
-		width: $width-medium-content;
+		width: $width-medium-content + 100px;
 	}
 
 	@include layout($tablet) {
+		overflow-x: hidden;
 		padding: 10px 40px;
 	}
 
 	@include layout($handheld) {
+		overflow-x: hidden;
 		padding: 20px;
 		h1 {
 			margin-top: 0;
